Add some pulumi changes

--- a/pulumi/Pulumi.dev.yaml
+++ b/pulumi/Pulumi.dev.yaml
@@ -1,1 +1,3 @@
-encryptionsalt: v1:vWisr7+kqAo=:v1:xg9MPEUlynpDwO1e:USQTw+K0ndenv+TwVoPEQFNGY6iREQ==
+encryptionsalt: v1:TQIYeC4yie0=:v1:ox5RCnQOblg0JiQE:l3zZWo0K/HGMQz8zhOcsrOAa4SjpDA==
+config:
+  azure-native:location: uk
