--- a/pulumi/Brumdotnet.csproj
+++ b/pulumi/Brumdotnet.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Pulumi" Version="3.*" />
+    <PackageReference Include="Pulumi.AzureNative" Version="3.4.0" />
   </ItemGroup>
 
 </Project>
