--- a/pulumi/infra/Pulumi.dev.yaml
+++ b/pulumi/infra/Pulumi.dev.yaml
@@ -1,3 +1,3 @@
 encryptionsalt: v1:TQIYeC4yie0=:v1:ox5RCnQOblg0JiQE:l3zZWo0K/HGMQz8zhOcsrOAa4SjpDA==
 config:
-  azure-native:location: uk
+  azure-native:location: uksouth
